refactor: General cleanup and JEI fixes